assets/style/style.css
body {
  font-family: 'Work Sans', sans-serif;
  margin: 10px;
}

.jumbotron {
  margin-top: 20px;
}

.currentScheduleHeader {
  background-color: #44566d;
  color: white;
}

.btn {
  background-color: #44566d;
  color: white;
}

.panel-title {
  font-size: 20px;
}

.train-info {
  text-align: center;
}

th {
  padding: 20px;
}

@media screen and (max-width: 503px) {
  .train-info {
    font-size: 10px;
  }
}

@media screen and (max-width: 375px) {
  .trainPic {
    width: 100%;
  }
  .jumbotron {
    font-size: 30px;
  }
}

@media screen and (max-width: 320px) {
  .trainPic {
    width: 100%;
  }
  .jumbotron {
    font-size: 30px;
  }
  .train-info {
    font-size: 7px;
  }
}

